# pardus-lightdm-greeter

./: .gitignore  Makefile  Readme.md  meson.build  pardus-greeter.pot  pardus-greeter.sh  pardus-lightdm-greeter.pot  pardus-lightdm-greeter.sh  update-translations.sh
.github/workflows/: main.yml
data/: colors-dark.css  colors.css  config.ini  greeter-wayland.desktop  greeter-x11.desktop  greeter.desktop  lightdm.conf  main.ui  servers.txt
debian/: changelog  conffiles  control  copyright  meson.build  postinst  rules
example/: module.py
po/: LINGUAS  es.po  pardus-lightdm-greeter.pot  pt.po  tr.po
src/: cli.py  main.py  msgs.py  util.py
src/data/: colors-dark.css  colors.css  config.ini  greeter.desktop  gsettings.xml  main.css  main.ui
src/module/: actions.py  blur.py  clock.py  daemon.py  gtkwindow.py  keyboard.py  lightdm.py  monitor.py  network.py  notes.py  options.py  reset.py  screen.py  sessionlist.py  userlist.py  windowmanager.py
src/wifi/: widget.py  wifi.py
